--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
       <section class="mainsection newss">
         <div class="courriel">
-            <h1>Stay up to date with the news</h1>
+            <h1>Join Us</h1>
             <div class="news">
 
                 <div class="mail">
@@ -444,8 +444,8 @@
 <!--_________________________FOOTER___________________________________________________________________FOOTER_______________________________________________________________________-->
     <footer>
         <div class="footleft">
-            <div class="logo footerlogo">
-                <p class="logo">THE INCENTIVE</p>
+            <div class="footerlogo">
+                <p id="logo">THE INCENTIVE</p>
             </div>
             <div class="social">
                 <a href=""> <img src="images/discorde.png" alt=""></a>
