site mis a jours today

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="firsleft">
                 <h1 class="textmaj">LOREM IPSUM GRAES ASDF</h1>
                 <h2 class="textgros">TWEET TO EARN</h2>
-                <p class="textpetit">Engage and remunerate members that tweet about you,</br> with your token (or USDC).
+                <p class="textpetit">Engage and remunerate members that tweet about you, with your token (or USDC).
                     Win-Win deal for everyone</p>
             </div>
             <div id="logoanimate">
