--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- Retravailler le footer pour le rendre plus fien et plus bg 
+Mattieu écrire -->
+
+
+
 <!DOCTYPE html>
 
 <html data-wf-page="TheIncentivePage" lang="en">
