--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ Mattieu écrire -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="/css/accueil.css" rel="stylesheet" type="text/css">
-    <link href="/css/header-footer.css" rel="stylesheet" type="text/css">
-    <link href="/css/normalise.css" rel="stylesheet" type="text/css">
+    <link href="./css/accueil.css" rel="stylesheet" type="text/css">
+    <link href="./css/header-footer.css" rel="stylesheet" type="text/css">
+    <link href="./css/normalise.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>WebFont.load({ google: { families: ["Space Grotesk:300,regular,500,600,700"] } });</script>
         <script src="https://kit.fontawesome.com/4b8ae7dabf.js" crossorigin="anonymous"></script>
     <script>!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="/static/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="/static/images/webclip.png" rel="apple-touch-icon">
+    <link href="./static/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="./static/images/webclip.png" rel="apple-touch-icon">
 
 </head>
 
@@ -67,7 +67,7 @@ Mattieu écrire -->
                 </lottie-player>
             </div>
             <div id="sectionTest">
-                <button id="testintt" style="height:100px">TRY IT</button>
+                <button id="testintt">TRY IT</button>
             </div>
 
             <div class="movetext" style="top: 85%;">
