--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ Mattieu écrire -->
                 <a href="index.html" ><p class="logo">THE INCENTIVE</p></a>
             </div>
            
-      
+            <li class="link">
+                <a href="template/partners.html" class="navigation connection"><button>Dashboard</button></a>
+            </li>
             <li class="link">
                 <a href="template/partners.html" class="navigation connection"><img src="images/utilisateur.png"></a>
             </li>
