--- a/profile.html
+++ b/profile.html
@@ -51,6 +51,14 @@
 
 
     <section class="profile">
+
+        <div class="reward">
+            <h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
+                Please fund it with your token and sol (fees).
+                Token balance : 0
+                SOL balance : 0.0
+                </h3>
+                </div>
         <div class="yourpageleft">
             <div class="6button">
                 <a href="/lp/krtgzoi/" target="_blank" class="button"> Your Incentive page</a>
@@ -73,12 +81,7 @@
         </div>
         
         
-        <div class="yourpageright">
-<h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
-    Please fund it with your token and sol (fees).
-    Token balance : 0
-    SOL balance : 0.0
-    </h3>
+   
 
         </div>
     </section>
