--- a/discordbot.html
+++ b/discordbot.html
@@ -7,7 +7,7 @@
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="css/profile.css" rel="stylesheet" type="text/css">
+    <link href="css/discord.css" rel="stylesheet" type="text/css">
     <link href="/css/header-footer.css" rel="stylesheet" type="text/css">
     <link href="/css/normalise.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
@@ -50,85 +50,28 @@
     </header>
 
 
-    <section class="profile">
 
-        <div class="rewards">
-            <h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
-                Please fund it with your token and sol (fees).
 
-            </h3>
-        </div>
-        <div class="balance"> Token balance : 0 </br>
-            SOL balance : 0.0</div>
 
-  
-            <h5 class="sbtitle">TWEET OR RAIDS?</h5>
- <h1 class="sectiontitleblack">YOUR CAMPAIGN</h1>
 
-            <div class="tweetraid">
+<section class="discordbot">
+    <h1 class="discord">Use our Discord bot to
+        engage your community </h1>
 
-                <a href="configure.html">
-                    <div class="buttonblanc">
-                        <div class="figure"><img src="/images/twitter.png" alt=""></div>
-                        <h2>Tweet to earn</h2>
-                    </div>
-                </a>
-                <a href="" class="raid">
-                    <div class="buttonblanc">
-                        <div class="figure"><img src="/images/discord_card.png" alt=""></div>
-                        <h2>Raid to earn</h2>
-                    </div>
-            </div>
-            </a>
-            <a href="discordbot.html">
-                <div class="buttondiscord">
-                    <div class="discord">
-                        <div class="figure"><img src="/images/discorde.png" alt=""></div>
-                        <div class="switch">
-                            <input class="switch__input" type="checkbox" id="switch-card-discord">
-                            <label class="switch__label" for="switch-card-discord" aria-hidden="true">Activate
-                                app</label>
-                            <div class="switch__marker" aria-hidden="true"></div>
-                        </div>
-                        <h2>Discord</h2>
-                    </div>
-            </a>
-        </div>
 
-        </div>
-        <div class="doublebouton">
-            <div class="statboard">
-                <h3> Discover your statistic and report Dashboard </h3>
+        <div class="lottie"><script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-                <a href="/lp/krtgzoi/" target="_blank" class="buttonpage">Dashboard</a>
-
-            </div>
-            <div class="yourpagetheincentive">
-                <h3> Here is your The Incentive page, you can send this page directly to your customers.</h3>
-
-                <a href="/lp/krtgzoi/" target="_blank" class="buttonpage"> Your Incentive page
-
+            <lottie-player src=" https://assets2.lottiefiles.com/packages/lf20_pghdouhq.json" background="transparent"
+                speed="1" style="width: 300px; height: 300px;" loop autoplay>
+            </lottie-player>
             
-            </a>
-        </div>
-        </div>
-    </section>
+           </div>
+
+        <a href="https://discord.com/api/oauth2/authorize?response_type=code&amp;client_id=976858244410654730&amp;permissions=133120&amp;scope=bot&amp;redirect_uri=http://localhost:8000/discord/configure/&amp;prompt=consent" class="buttondiscord">Add bot to Discord</a>
+</section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      
     <footer>
         <div class="footleft">
             <div class="footerlogo">
@@ -151,5 +94,3 @@
     </footer>
 
 
-
-</body>
