begin reports page et amélioration du normalise

--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,8 @@
 
 
     <section class="profile">
-
+ <h5 class="subtitle">is here for monitoring</h5>
+        <h1>Dashboard</h1>
         <div class="rewards">
             <h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
                 Please fund it with your token and sol (fees).
