--- a/configure.html
+++ b/configure.html
@@ -7,17 +7,18 @@
 
     <meta content="width=device-width, initial-scale=1" name="viewport">
 
-    <link href="/css/configure.css" rel="stylesheet" type="text/css">
-    <link href="/css/header-footer.css" rel="stylesheet" type="text/css">
-    <link href="/css/normalise.css" rel="stylesheet" type="text/css">
+    <link href="./css/form.css" rel="stylesheet" type="text/css">
+    <link href="./css/configure.css" rel="stylesheet" type="text/css">
+    <link href="./css/header-footer.css" rel="stylesheet" type="text/css">
+    <link href="./css/normalise.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
     <script
         type="text/javascript">WebFont.load({ google: { families: ["Space Grotesk:300,regular,500,600,700"] } });</script>
     <script src="https://kit.fontawesome.com/4b8ae7dabf.js" crossorigin="anonymous"></script>
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-    <link href="/static/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="/static/images/webclip.png" rel="apple-touch-icon">
+    <link href="./static/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="./static/images/webclip.png" rel="apple-touch-icon">
 
 </head>
 
@@ -62,43 +63,32 @@
                 <input type="hidden" name="csrfmiddlewaretoken"
                     value="Vswr7ysXzx2WCPc0DZcIXPNIdX8Hq1XwP2yRfSlIrszNGrP0G0XYsEruwlAZm4lC">
                 <div class="confform">
-                    <div class="firstform">
+                    <div class="w-col w-col-3">
                         <label for="id_name" class="form-label">Name of the project</label>
                         <input type="text" name="name" value="The Incentive" class="input w-input" placeholder="Ex: The Incentive" maxlength="100" required="" id="id_name">
                     </div>
-                    <div class="firstform"><label for="id_token" class="form-label">Token symbol*</label>
-                        <input type="text" name="token" value="fjqjgkqdg" class="input w-input" placeholder="Ex: $USDC"
-                            maxlength="100" required="" id="id_token">
+                    <div class="w-col w-col-3">
+                        <label for="id_name" class="form-label">Name of the project</label>
+                        <input type="text" name="name" value="The Incentive" class="input w-input" placeholder="Ex: The Incentive" maxlength="100" required="" id="id_name">
                     </div>
-                    <div class="firstform"><label for="id_tokenAddress" class="form-label">Token Address*</label>
-                        <input type="text" name="tokenAddress" value="idoLztG5ZGMVEjjoQWjeSu2eVkVsp3YnrFZKf7dNi4j"
-                            class="input w-input" placeholder="Ex: EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v"
-                            maxlength="200" required="" id="id_tokenAddress">
+                    <div class="w-col w-col-3">
+                        <label for="id_name" class="form-label">Name of the project</label>
+                        <input type="text" name="name" value="The Incentive" class="input w-input" placeholder="Ex: The Incentive" maxlength="100" required="" id="id_name">
                     </div>
-
-                    <div class="firstform"><label for="id_twitter" class="form-label">Twitter username*</label>
-                        <input type="text" name="twitter" value="rgjdngs" class="input w-input"
-                            placeholder="Ex: The_Incentive" maxlength="100" required="" id="id_twitter">
-                    </div>
-                    <div class="firstform">
+                    <div class="w-col w-col-3">
                         <label for="id_frequency" class="form-label">Frequency*</label>
-                        <select name="frequency" id="id_frequency">
+                        <select name="frequency" id="id_frequency" class="input w-input">
                             <option value="0" selected="">each 31 days</option>
-
                             <option value="1">each 7 days</option>
-
                             <option value="2">each day</option>
-
                         </select>
-
-
+                        <br/>
                         Frequency which people can Tweet2Earn
                     </div>
                 </div>
-                <div class="next">
-                <input type="submit" value="Next" class="button w-button">
-            </div>
-
+                <center>
+                    <input type="submit" value="Next" class="button w-button">
+                </center>
             </form>
         </div>
     </section>
