--- a/profile.html
+++ b/profile.html
@@ -51,7 +51,7 @@
 
 
     <section class="profile">
- <h5 class="subtitle">is here for monitoring</h5>
+ <h5 class="sbtitlewhite">is here for monitoring</h5>
         <h1>Dashboard</h1>
         <div class="rewards">
             <h3>To reward your users we use the wallet: HCtG5Bn7C6hYW25qo9JtowKiviWU7YVUrc9qkP5YJ1BH
@@ -64,7 +64,7 @@
 
   
             <h5 class="sbtitle">TWEET OR RAIDS?</h5>
- <h1 class="sectiontitleblack">YOUR CAMPAIGN</h1>
+ <h1 class="sectiontitle">YOUR CAMPAIGN</h1>
 
             <div class="tweetraid">
 
@@ -84,7 +84,7 @@
             <a href="discordbot.html">
                 <div class="buttondiscord">
                     <div class="discord">
-                        <div class="figure"><img src="/images/discorde.png" alt=""></div>
+                        <div class="figure"><img src="/images/discorde.png" alt="">
                         <div class="switch">
                             <input class="switch__input" type="checkbox" id="switch-card-discord">
                             <label class="switch__label" for="switch-card-discord" aria-hidden="true">Activate
@@ -93,6 +93,7 @@
                         </div>
                         <h2>Discord</h2>
                     </div>
+                </div>
             </a>
         </div>
 
