tout les header et footer remis à jours

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Mattieu écrire -->
                 <a href="template/partners.html" class="navigation"> partners</a>
             </li>
             <li class="link">
-                <a href="profile.html" class="navigation connection"><button class="button2">Dashboard</button></a>
+                <a href="template/profile.html" class="navigation connection"><button class="button2">Dashboard</button></a>
             </li>
             <li class="link">
-                <a href="template/partners.html" class="navigation connection"><button class="button2">Connect</button></a>
+                <a href="" class="navigation connection"><button class="button2">Connect</button></a>
             </li>
 
 
@@ -52,7 +52,7 @@ Mattieu écrire -->
         <!--_________________________HOMEPAGE___________________________________________________________________HOMEPAGE______________________________________________________________________-->
         <section class="threeparts">
             <div id="firsleft">
-                <h1 class="textmaj">LOREM IPSUM GRAES ASDF</h1>
+                <h1 class="textmaj">BOOST OF COMMUNITY</h1>
                 <h2 class="textgros">TWEET TO EARN</h2>
                 <p class="textpetit">Engage and remunerate members that tweet about you, with your token (or USDC).
                     Win-Win deal for everyone</p>
@@ -136,45 +136,33 @@ Mattieu écrire -->
             <div class="reward whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-medal fa-2xl fa-colors"></i>
                 <h2>Reward your loyal users</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <p>Design the future of web 3 marketing with us! The tool we have developed will allow you to give the power back to the users. Pay your followers who talk about you instead of financing ad agencies.</p>
             </div>
             <div class="boost whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-eye fa-2xl fa-colors"></i>
-                <h2>Boost your visibility</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <h2>Boost your visibility & Increase the engagement of your community</h2>
+                <p>You want to grow your community and gain visibility to be part of the biggest web 3 projects? We're here to help you become the best. Keeping your community active and engaging your users has never been easier with the "Tweet2earn" concept. </p>
             </div>
             <div class="increase whytheincentivegrid">
 
                 <i class="fa-sharp fa-solid fa-handshake fa-2xl fa-colors"></i>
-                <h2>Increase the engagement of your community</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <h2>Automated system</h2>
+                <p>Creating a project takes a lot of time. We take care of the "Tweet2earn" marketing tool 100% so that you can focus on your project and reduce your workload.</p>
             </div>
             <div class="anti-bot whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-lock fa-2xl"></i>
                 <h2>Anti-bot Twitter system</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <p>Ur company has developed an anti-bot twitter system based on a high performance scoring system that will prevent you from paying malicious users or computers. </p>
             </div>
             <div class="schedule whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-filter fa-2xl"></i>
                 <h2>Schedule and filter your tweets to earn</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <p>Once the tool is in your hands, a dashboard will be made available to you that will allow you to customize each aspect of your marketing campaign according to your strategy, and to view the statistics of your campaign.  </p>
             </div>
             <div class="flash whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-bolt fa-2xl"></i>
                 <h2>Create flash campaigns</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et sapien euismod, porttitor diam
-                    sed, consequat lectus. Proin nisl metus, sollicitudin non nunc sed, aliquet varius odio. Nam nec
-                    odio in lacus accumsan luctus nec ac elit. </p>
+                <p>Set up a unique communication and explode your statistics! A short-term flash campaign with huge rewards just for your users</p>
             </div>
         </div>
     </section>
@@ -224,7 +212,7 @@ Mattieu écrire -->
                 <p>We select partners by ourselves, if you want to use The Incentive send us a message on Twitter. If
                     your project is selected, we will give you access to the configuration page !</p>
             </details>
-            <details open>
+            <details>
                 <summary>
                     <h2>"What token should I use ?"</h2>
                 </summary>
@@ -469,8 +457,8 @@ Mattieu écrire -->
                 <p id="logo">THE INCENTIVE</p>
             </div>
             <div class="social">
-                <a href=""> <img src="images/discorde.png" alt=""></a>
-                <a href=""> <img class="logosociaux" src="images/twitter.png" alt=""></a>
+                <a href="http://discord.gg/SsNcMV2scb"> <img src="images/discorde.png" alt=""></a>
+                <a href="https://twitter.com/The_Incentive"> <img class="logosociaux" src="images/twitter.png" alt=""></a>
             </div>
         </div>
         <div class="help">
