--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ Mattieu écrire -->
                 <a href="template/partners.html" class="navigation"> partners</a>
             </li>
             <li class="link">
-                <a href="template/profile.html" class="navigation connection"><button class="button2">Dashboard</button></a>
+                <a href="template/profile.html" class="navigation connection"><button
+                        class="button2">Dashboard</button></a>
             </li>
             <li class="link">
                 <a href="" class="navigation connection"><button class="button2">Connect</button></a>
@@ -68,7 +69,7 @@ Mattieu écrire -->
                 <button id="testintt">TRY IT</button>
             </div>
 
-          
+
         </section>
         <div class="movetext">
             <marquee>DISCOVER THE TWEET TO EARN</marquee>
@@ -136,33 +137,41 @@ Mattieu écrire -->
             <div class="reward whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-medal fa-2xl fa-colors"></i>
                 <h2>Reward your loyal users</h2>
-                <p>Design the future of web 3 marketing with us! The tool we have developed will allow you to give the power back to the users. Pay your followers who talk about you instead of financing ad agencies.</p>
+                <p>Design the future of web 3 marketing with us! The tool we have developed will allow you to give the
+                    power back to the users. Pay your followers who talk about you instead of financing ad agencies.</p>
             </div>
             <div class="boost whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-eye fa-2xl fa-colors"></i>
                 <h2>Boost your visibility & Increase the engagement of your community</h2>
-                <p>You want to grow your community and gain visibility to be part of the biggest web 3 projects? We're here to help you become the best. Keeping your community active and engaging your users has never been easier with the "Tweet2earn" concept. </p>
+                <p>You want to grow your community and gain visibility to be part of the biggest web 3 projects? We're
+                    here to help you become the best. Keeping your community active and engaging your users has never
+                    been easier with the "Tweet2earn" concept. </p>
             </div>
             <div class="increase whytheincentivegrid">
 
                 <i class="fa-sharp fa-solid fa-handshake fa-2xl fa-colors"></i>
                 <h2>Automated system</h2>
-                <p>Creating a project takes a lot of time. We take care of the "Tweet2earn" marketing tool 100% so that you can focus on your project and reduce your workload.</p>
+                <p>Creating a project takes a lot of time. We take care of the "Tweet2earn" marketing tool 100% so that
+                    you can focus on your project and reduce your workload.</p>
             </div>
             <div class="anti-bot whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-lock fa-2xl"></i>
                 <h2>Anti-bot Twitter system</h2>
-                <p>Ur company has developed an anti-bot twitter system based on a high performance scoring system that will prevent you from paying malicious users or computers. </p>
+                <p>Ur company has developed an anti-bot twitter system based on a high performance scoring system that
+                    will prevent you from paying malicious users or computers. </p>
             </div>
             <div class="schedule whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-filter fa-2xl"></i>
                 <h2>Schedule and filter your tweets to earn</h2>
-                <p>Once the tool is in your hands, a dashboard will be made available to you that will allow you to customize each aspect of your marketing campaign according to your strategy, and to view the statistics of your campaign.  </p>
+                <p>Once the tool is in your hands, a dashboard will be made available to you that will allow you to
+                    customize each aspect of your marketing campaign according to your strategy, and to view the
+                    statistics of your campaign. </p>
             </div>
             <div class="flash whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-bolt fa-2xl"></i>
                 <h2>Create flash campaigns</h2>
-                <p>Set up a unique communication and explode your statistics! A short-term flash campaign with huge rewards just for your users</p>
+                <p>Set up a unique communication and explode your statistics! A short-term flash campaign with huge
+                    rewards just for your users</p>
             </div>
         </div>
     </section>
@@ -192,13 +201,15 @@ Mattieu écrire -->
 
 
     <!--_________________________FAQ___________________________________________________________________FAQ______________________________________________________________________-->
+    <div id="faq"></div>
+    <h1 class="sectiontitle  ">FAQ</h1>
 
-    <h1 class="sectiontitle">FAQ</h1>
-    <div class="content">
+    <div class="content faq">
         <div class="center">
             <details>
                 <summary>
                     <h2>"How do you avoid bots ?"</h2>
+                    <i class="fa-solid fa-chevron-down"></i>
                 </summary>
                 <p>- Partners can setup a minimum of followers for getting rewards
                     </br>- Tweet2Earn is limited to 1 tweet/month/user by projects
@@ -208,6 +219,7 @@ Mattieu écrire -->
             <details>
                 <summary>
                     <h2>"How do we become partner ?"</h2>
+                    <i class="fa-solid fa-chevron-down"></i>
                 </summary>
                 <p>We select partners by ourselves, if you want to use The Incentive send us a message on Twitter. If
                     your project is selected, we will give you access to the configuration page !</p>
@@ -215,12 +227,14 @@ Mattieu écrire -->
             <details>
                 <summary>
                     <h2>"What token should I use ?"</h2>
+                    <i class="fa-solid fa-chevron-down"></i>
                 </summary>
                 <p>You could reward users with USDC or with your own token.</p>
             </details>
             <details>
                 <summary>
                     <h2>"Can I link a burn wallet ?"</h2>
+                    <i class="fa-solid fa-chevron-down"></i>
                 </summary>
                 <p>YES ! We recommend using a burn wallet, connecting with Solana is just used to replace email/password
                     and we don't use your wallet, for remunerate users we ask you to send funds to a wallet under our
@@ -239,18 +253,18 @@ Mattieu écrire -->
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
-                                    Our web design team will spend time with our digital marketing team.
+                                    I am passionate about web 3.0 and building the future of marketing 🌱
                                 </p>
                                 <div class="socials mt-20">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                                     <a href="#"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">Quilichini Louis</br>Dev / Front dev</h6>
+                    <h6 class="team-title">Quilichini Louis</br>Co-founders</h6>
 
                 </div>
             </div>
@@ -263,18 +277,20 @@ Mattieu écrire -->
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
-                                    Our web design team will spend time with our digital marketing team.
+                                    Currently director of a company in the wellness sector, I am in the process of
+                                    reconverting to the world of web 3.0
+                                    Let's create the world of tomorrow 🤘🏻
                                 </p>
                                 <div class="socials mt-20">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                                     <a href="#"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">Mattieu Durand</br>Marketing / Community</h6>
+                    <h6 class="team-title">Mattieu Durand</br>Co-founders</h6>
 
                 </div>
             </div>
@@ -283,22 +299,23 @@ Mattieu écrire -->
             <div class="col-md-4 col-sm-6 team-wrap">
                 <div class="team-member last text-center">
                     <div class="team-img">
-                        <img src="images/louis2.jpg" alt="">
+                        <img src="images/antoinemarcel.jpg" alt="">
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
-                                    Our web design team will spend time with our digital marketing team.
+
+                                    Love marketing, find new ways to acquire customers and help projects to grow 🚀
                                 </p>
                                 <div class="socials mt-20">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-twitter"></i></a>
-                                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                                     <a href="#"><i class="fa fa-envelope"></i></a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <h6 class="team-title">Marcel Antoine</br> Dev full stack </h6>
+                    <h6 class="team-title">Marcel Antoine</br> Co-founders</h6>
 
                 </div>
             </div>
@@ -458,15 +475,16 @@ Mattieu écrire -->
             </div>
             <div class="social">
                 <a href="http://discord.gg/SsNcMV2scb"> <img src="images/discorde.png" alt=""></a>
-                <a href="https://twitter.com/The_Incentive"> <img class="logosociaux" src="images/twitter.png" alt=""></a>
+                <a href="https://twitter.com/The_Incentive"> <img class="logosociaux" src="images/twitter.png"
+                        alt=""></a>
             </div>
         </div>
         <div class="help">
             <ul>
                 <h3>HELP</h3>
 
-                <li> <a href="" class="contact">Contact</a></li>
-                <li> <a href="" class="faq">FAQ</a></li>
+                <li> <a href="mailto:contact@theincentive.xyz" class="contact">Contact</a></li>
+                <li> <a href="#faq" class="faq">FAQ</a></li>
                 <li> <a href="" class="myaccount">My Account</a></li>
             </ul>
         </div>
