--- a/index.html
+++ b/index.html
@@ -493,13 +493,13 @@ Mattieu écrire -->
 
 
     <!--_________________________SCRIPT___________________________________________________________________SCRIPT_______________________________________________________________________-->
-    <script src="coffescript.coffee" type="text/coffescript"></script>
+    
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="js/javascript.js" type="text/javascript"></script>
-
+    <script src="js/landing.js" type="text/javascript"></script>
     <script src="/static/js/jquery.js?v=1.3" type="text/javascript"></script>
     <script src="/static/js/webflow.js?v=1.3" type="text/javascript"></script>
 
