Mise à jours de la team

--- a/index.html
+++ b/index.html
@@ -277,9 +277,7 @@ Mattieu écrire -->
                         <div class="overlay">
                             <div class="team-details text-center">
                                 <p>
-                                    Currently director of a company in the wellness sector, I am in the process of
-                                    reconverting to the world of web 3.0
-                                    Let's create the world of tomorrow 🤘🏻
+                                    I'm passionate about Web 3. Let's create the world of tommorow🤘🏻
                                 </p>
                                 <div class="socials mt-20">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
