--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Mattieu écrire -->
             </div>
             <div class="boost whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-eye fa-2xl fa-colors"></i>
-                <h2>Boost your visibility & Increase the engagement of your community</h2>
+                <h2>Boost your visibility</h2>
                 <p>You want to grow your community and gain visibility to be part of the biggest web 3 projects? We're
                     here to help you become the best. Keeping your community active and engaging your users has never
                     been easier with the "Tweet2earn" concept. </p>
@@ -162,7 +162,7 @@ Mattieu écrire -->
             </div>
             <div class="schedule whytheincentivegrid">
                 <i class="fa-sharp fa-solid fa-filter fa-2xl"></i>
-                <h2>Schedule and filter your tweets to earn</h2>
+                <h2>Schedule and filter </h2>
                 <p>Once the tool is in your hands, a dashboard will be made available to you that will allow you to
                     customize each aspect of your marketing campaign according to your strategy, and to view the
                     statistics of your campaign. </p>
@@ -491,7 +491,7 @@ Mattieu écrire -->
 
 
     <!--_________________________SCRIPT___________________________________________________________________SCRIPT_______________________________________________________________________-->
-    
+
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
