Corriction Des retours clients

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Mattieu écrire -->
 
         </section>
         <div class="movetext">
-            <marquee>DISCOVER THE TWEET TO EARN</marquee>
+            <marquee scrollamount="10">DISCOVER THE TWEET2EARN   DISCOVER THE TWEET2EARN  -  DISCOVER THE TWEET2EARN  -  DISCOVER THE TWEET    2EARN    DISCOVER THE TWEET2EARN</marquee>
         </div>
     </header>
 
@@ -337,7 +337,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q4-2022</h2>
                                     <h4>Rebranding</h4>
                                     Creation of a new branding with a French designer, new logo, new colors...
 
@@ -366,7 +366,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q2-2023</h2>
                                     <h4> Creation of the NFT</h4>
                                     Creation and mint of the NFT, The Incentive that gives access to different
                                     advantages and things that we
@@ -386,7 +386,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q3-2023</h2>
                                     <h4>Creation of the coworking metaverse</h4>
                                     Creation of a coworking platform in the metaverse, with parties, speakers, and
                                     offices for the NFT holders.
@@ -402,7 +402,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q4-2023</h2>
                                     <h4>Launching on Tezos</h4>
                                     The Incentive launching on a new blockchain opens up thousands of new projects by
                                     preempting available in the Tezos blockchain.
@@ -417,7 +417,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q1-2024</h2>
                                     <h4> The Incentive becomes decentralized</h4>
                                     Implementation of everything under smart contract. And implementation of the
                                     governance under DAO.
@@ -430,7 +430,7 @@ Mattieu écrire -->
                             <li>
 
                                 <div class="contentroad paragraph-2">
-                                    <h2>Q1-2023</h2>
+                                    <h2>Q2-2024</h2>
                                     <h4>Open to Web2</h4>
                                     Twitter users will be able to connect to the site with an
                                     email address and earn money without creating a wallet.
